--- a/rabbitmq-prometheus-grafana/prometheus/prometheus.yml
+++ b/rabbitmq-prometheus-grafana/prometheus/prometheus.yml
@@ -2,6 +2,8 @@ apiVersion: monitoring.coreos.com/v1
 kind: Prometheus
 metadata:
   name: prometheus
+  labels:
+    app: prometheus
 spec:
   serviceAccountName: prometheus
   serviceMonitorSelector:
